--- a/Churches/com.churches.by/src/main/res/layout/activity_churches_map.xml
+++ b/Churches/com.churches.by/src/main/res/layout/activity_churches_map.xml
@@ -1,4 +1,17 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:id="@+id/container"
-    android:layout_width="match_parent" android:layout_height="match_parent"
-    tools:context=".ChurchesMap" tools:ignore="MergeRootFrame" />
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/container"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".ChurchesMap"
+    tools:ignore="MergeRootFrame">
+
+    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/map"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context="com.churches.by.ChurchesMapFragment" />
+
+</FrameLayout>
