--- a/Churches/com.churches.by/src/main/res/layout/activity_churches_map.xml
+++ b/Churches/com.churches.by/src/main/res/layout/activity_churches_map.xml
@@ -8,10 +8,10 @@
 
     <fragment xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/map"
-        android:name="com.google.android.gms.maps.SupportMapFragment"
+        android:id="@+id/church_map"
+        android:name="com.churches.by.ui.Map"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context="com.churches.by.ChurchesMapFragment" />
+        tools:context="com.churches.by.ui.Map" />
 
 </FrameLayout>
