--- a/Churches/com.churches.by/src/main/res/menu/menu_churches_map.xml
+++ b/Churches/com.churches.by/src/main/res/menu/menu_churches_map.xml
@@ -1,13 +1,13 @@
-<menu
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".ChurchesMap">
 
-    <item android:id="@+id/search"
-        android:title="@string/search_title"
+    <item
+        android:id="@+id/search"
+        android:actionViewClass="android.widget.SearchView"
         android:icon="@android:drawable/ic_menu_search"
-        app:showAsAction="ifRoom"
-        android:actionViewClass="android.widget.SearchView" />
+        android:title="@string/search_title"
+        app:showAsAction="ifRoom" />
 
 </menu>
