optimize nag drawer and apply colorPrimary to action bar and nag drawer header

--- a/Churches/com.churches.by/src/main/res/layout/fragment_navigation_drawer.xml
+++ b/Churches/com.churches.by/src/main/res/layout/fragment_navigation_drawer.xml
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/navigation_drawer_header_height"
         android:gravity="center_vertical"
-        android:background="?attr/colorPrimaryDark"
+        android:background="?attr/colorPrimary"
         android:text="Header"/>
 
     <ListView
