--- a/Churches/com.churches.by/src/main/res/layout/toolbar.xml
+++ b/Churches/com.churches.by/src/main/res/layout/toolbar.xml
@@ -3,4 +3,4 @@
     android:id="@+id/toolbar"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="?attr/colorPrimaryDark"/>
+    android:background="?attr/colorPrimary"/>
