--- a/Churches/com.churches.by/src/main/res/values/refs.xml
+++ b/Churches/com.churches.by/src/main/res/values/refs.xml
@@ -9,4 +9,13 @@
     -->
     <item name="fragment_church" type="layout">@layout/fragment_church_list</item>
 
+    <!--
+    Layout alias to replace the single-pane version of the layout with a
+    two-pane version on Large screens.
+
+    For more on layout aliases, see:
+    http://developer.android.com/training/multiscreen/screensizes.html#TaskUseAliasFilters
+    -->
+    <item name="fragment_favorite" type="layout">@layout/fragment_favorite_list</item>
+
 </resources>
