--- a/Churches/com.churches.by/src/main/res/layout/row_item.xml
+++ b/Churches/com.churches.by/src/main/res/layout/row_item.xml
@@ -8,8 +8,8 @@
     <ImageView
         android:id="@+id/row_image"
         android:layout_width="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical" />
 
     <TextView
         android:id="@+id/row_text"
