--- a/Churches/com.churches.by/src/main/res/values/colors.xml
+++ b/Churches/com.churches.by/src/main/res/values/colors.xml
@@ -2,6 +2,7 @@
 <resources>
 
     <color name="background_color">#F3F8FE</color>
+    <color name="toolbar_text_color">#F3F8FE</color>
     <color name="primary_color">#2988F2</color>
     <color name="primary_dark_color">#0373F0</color>
     <color name="accent_color">#ABA3F7</color>
