--- a/Churches/com.churches.by/src/main/res/values/themes.xml
+++ b/Churches/com.churches.by/src/main/res/values/themes.xml
@@ -7,7 +7,17 @@
         <item name="colorPrimaryDark">@color/primary_dark_color</item>
         <item name="colorAccent">@color/accent_color</item>
 
+        <item name="toolbarStyle">@style/Widget.Churches.Toolbar</item>
+
         <item name="android:windowNoTitle">true</item>
         <item name="windowActionBar">false</item>
+    </style>
+
+    <style name="Widget.Churches.Toolbar" parent="Widget.AppCompat.Toolbar">
+        <item name="theme">@style/ThemeOverlay.Churches.ActionBar</item>
+    </style>
+
+    <style name="ThemeOverlay.Churches.ActionBar" parent="ThemeOverlay.AppCompat">
+        <item name="android:textColorPrimary">@color/toolbar_text_color</item>
     </style>
 </resources>
