--- a/Churches/com.churches.by/src/main/res/layout/fragment_church_list.xml
+++ b/Churches/com.churches.by/src/main/res/layout/fragment_church_list.xml
@@ -5,15 +5,10 @@
     android:layout_height="match_parent"
     tools:context="com.churches.by.ui.ChurchListFragment">
 
-    <ListView
-        android:id="@android:id/list"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/churches_recycler_view"
+        android:scrollbars="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-
-    <TextView
-        android:id="@android:id/empty"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center" />
+        android:layout_height="match_parent"/>
 
 </FrameLayout>
