remove functional classes add icon to dummy church class show small icon in row item

--- a/Churches/com.churches.by/src/main/res/layout/activity_nav_drawer.xml
+++ b/Churches/com.churches.by/src/main/res/layout/activity_nav_drawer.xml
@@ -23,7 +23,7 @@
 
     <fragment
         android:id="@+id/navigation_drawer"
-        android:name="com.churches.by.ui.NavigationDrawerFragment"
+        android:name="com.churches.by.ui.drawer.NavigationDrawerFragment"
         android:layout_width="@dimen/navigation_drawer_width"
         android:layout_height="match_parent"
         android:layout_gravity="start"
