--- a/Churches/com.churches.by/src/main/res/layout/fragment_church_list.xml
+++ b/Churches/com.churches.by/src/main/res/layout/fragment_church_list.xml
@@ -3,12 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.churches.by.ui.ChurchListFragment">
+    tools:context="com.churches.by.ui.churcheslist.ChurchListFragment">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/churches_recycler_view"
-        android:scrollbars="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:scrollbars="vertical" />
 
 </FrameLayout>
