--- a/Churches/com.churches.by/src/main/res/layout/activity_details.xml
+++ b/Churches/com.churches.by/src/main/res/layout/activity_details.xml
@@ -9,44 +9,42 @@
         android:id="@+id/toolbar"
         layout="@layout/toolbar" />
 
-    <android.support.v7.widget.CardView
-        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:id="@+id/church_image_frame"
-        android:layout_gravity="center"
-        card_view:cardBackgroundColor="#ffccaa"
         android:layout_width="match_parent"
-        android:layout_height="150dp">
+        android:layout_height="150dp"
+        android:layout_gravity="center"
+        card_view:cardBackgroundColor="#ffccaa">
 
         <ImageView
             android:id="@+id/detailed_church_image"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center"
-            android:scaleType="centerCrop"/>
+            android:scaleType="centerCrop" />
 
         <TextView
             android:id="@+id/parish_event_message"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:paddingLeft="6dp"
-            android:paddingBottom="6dp"
             android:layout_gravity="bottom"
-            android:text="@string/events_list_title" />
+            android:paddingBottom="6dp"
+            android:paddingLeft="6dp"
+            android:text="@string/events_list_title"
+            android:textAppearance="?android:attr/textAppearanceLarge" />
 
     </android.support.v7.widget.CardView>
 
-    <LinearLayout
+
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
 
-
-
-    </LinearLayout>
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/church_events_recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scrollbars="vertical" />
+    </FrameLayout>
 
 </LinearLayout>
