align event row vertically

--- a/Churches/com.churches.by/src/main/res/layout/church_event_row.xml
+++ b/Churches/com.churches.by/src/main/res/layout/church_event_row.xml
@@ -5,6 +5,7 @@
     android:background="?attr/selectableItemBackground"
     android:minHeight="?attr/listPreferredItemHeightSmall"
     android:orientation="horizontal"
+    android:gravity="center_vertical"
     android:padding="@dimen/listPreferredItemPadding"
     android:textAppearance="?attr/textAppearanceListItemSmall">
 
