--- a/Churches/com.churches.by/src/main/res/layout/church_list_row_item.xml
+++ b/Churches/com.churches.by/src/main/res/layout/church_list_row_item.xml
@@ -32,11 +32,13 @@
 
         <TextView
             android:id="@+id/church_name"
+            android:textAppearance="?android:attr/textAppearanceMedium"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
         <TextView
             android:id="@+id/church_address"
+            android:textAppearance="?android:attr/textAppearanceSmall"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
