add some assets

--- a/Churches/com.churches.by/src/main/res/menu/details_activity_menu.xml
+++ b/Churches/com.churches.by/src/main/res/menu/details_activity_menu.xml
@@ -4,9 +4,8 @@
     tools:context=".ChurchesMap">
 
     <item
-        android:id="@+id/search"
-        android:actionViewClass="android.widget.SearchView"
-        android:icon="@drawable/ic_action_search"
+        android:id="@+id/calendar"
+        android:icon="@drawable/ic_action_calendar_month"
         android:title="@string/search_title"
         app:showAsAction="ifRoom" />
 
