--- a/Churches/com.churches.by/src/main/res/layout/drawer_row_item.xml
+++ b/Churches/com.churches.by/src/main/res/layout/drawer_row_item.xml
@@ -12,6 +12,7 @@
         android:id="@+id/row_image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
         android:layout_gravity="center_vertical" />
 
     <TextView
