configure white action bar items via themes

--- a/Churches/com.churches.by/src/main/res/values/themes.xml
+++ b/Churches/com.churches.by/src/main/res/values/themes.xml
@@ -19,5 +19,8 @@
 
     <style name="ThemeOverlay.Churches.ActionBar" parent="ThemeOverlay.AppCompat">
         <item name="android:textColorPrimary">@color/toolbar_text_color</item>
+
+        <item name="colorControlNormal">@android:color/white</item>
+        <item name="actionMenuTextColor">@color/toolbar_text_color</item>
     </style>
 </resources>
