--- a/Churches/com.churches.by/src/main/res/values/themes.xml
+++ b/Churches/com.churches.by/src/main/res/values/themes.xml
@@ -6,6 +6,7 @@
         <item name="colorPrimary">@color/primary_color</item>
         <item name="colorPrimaryDark">@color/primary_dark_color</item>
         <item name="colorAccent">@color/accent_color</item>
+        <item name="colorControlHighlight">@color/accent_color</item>
 
         <item name="toolbarStyle">@style/Widget.Churches.Toolbar</item>
 
