--- a/Churches/com.churches.by/src/main/res/values/themes.xml
+++ b/Churches/com.churches.by/src/main/res/values/themes.xml
@@ -10,8 +10,8 @@
 
         <item name="toolbarStyle">@style/Widget.Churches.Toolbar</item>
 
+        <item name="android:windowActionBar">false</item>
         <item name="android:windowNoTitle">true</item>
-        <item name="windowActionBar">false</item>
     </style>
 
     <style name="Widget.Churches.Toolbar" parent="Widget.AppCompat.Toolbar">
