--- a/Churches/com.churches.by/src/main/res/layout/activity_details.xml
+++ b/Churches/com.churches.by/src/main/res/layout/activity_details.xml
@@ -1,15 +1,12 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context="com.churches.by.ui.details.DetailsActivity">
 
-    <include
-        android:id="@+id/toolbar"
-        layout="@layout/toolbar" />
-
-    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    <android.support.v7.widget.CardView
         android:id="@+id/church_image_frame"
         android:layout_width="match_parent"
         android:layout_height="150dp"
