--- a/Churches/com.churches.by/src/main/res/menu/menu_churches_map.xml
+++ b/Churches/com.churches.by/src/main/res/menu/menu_churches_map.xml
@@ -4,10 +4,24 @@
     tools:context=".ChurchesMap">
 
     <item
-        android:id="@+id/search"
-        android:actionViewClass="android.widget.SearchView"
-        android:icon="@drawable/ic_action_search"
-        android:title="@string/search_title"
+        android:id="@+id/menu_settings"
+        android:icon="@drawable/ic_action_settings"
+        android:title="@string/nav_drawer_settings"
         app:showAsAction="ifRoom" />
+
+
+    <item
+        android:id="@+id/menu_about"
+        android:icon="@drawable/ic_action_help"
+        android:title="@string/nav_drawer_about"
+        app:showAsAction="ifRoom" />
+
+
+    <!--<item-->
+        <!--android:id="@+id/search"-->
+        <!--android:actionViewClass="android.widget.SearchView"-->
+        <!--android:icon="@drawable/ic_action_search"-->
+        <!--android:title="@string/search_title"-->
+        <!--app:showAsAction="ifRoom" />-->
 
 </menu>
