--- a/Churches/com.churches.by/src/main/res/layout/details_fragment.xml
+++ b/Churches/com.churches.by/src/main/res/layout/details_fragment.xml
@@ -1,10 +1,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context="com.churches.by.ui.details.DetailsActivity">
+    android:orientation="vertical" >
 
     <android.support.v7.widget.CardView
         android:id="@+id/church_image_frame"
