--- a/Churches/com.churches.by/src/main/res/layout/schedule_fragment.xml
+++ b/Churches/com.churches.by/src/main/res/layout/schedule_fragment.xml
@@ -8,9 +8,10 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/mass_schedule"/>
+        android:text="@string/mass_schedule"
+        android:textAppearance="?android:attr/textAppearanceLarge"/>
 
-    <RecyclerView
+    <android.support.v7.widget.RecyclerView
         android:id="@+id/schedule_view"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"/>
