--- a/Churches/com.churches.by/src/main/res/menu/menu_churches_map.xml
+++ b/Churches/com.churches.by/src/main/res/menu/menu_churches_map.xml
@@ -1,27 +1,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".ChurchesMap">
-
-    <item
-        android:id="@+id/menu_settings"
-        android:icon="@drawable/ic_action_settings"
-        android:title="@string/nav_drawer_settings"
-        app:showAsAction="ifRoom" />
-
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
         android:id="@+id/menu_about"
         android:icon="@drawable/ic_action_help"
         android:title="@string/nav_drawer_about"
         app:showAsAction="ifRoom" />
-
-
-    <!--<item-->
-        <!--android:id="@+id/search"-->
-        <!--android:actionViewClass="android.widget.SearchView"-->
-        <!--android:icon="@drawable/ic_action_search"-->
-        <!--android:title="@string/search_title"-->
-        <!--app:showAsAction="ifRoom" />-->
 
 </menu>
