implement navigation to map for display church there

--- a/Churches/com.churches.by/src/main/res/menu/details_activity_menu.xml
+++ b/Churches/com.churches.by/src/main/res/menu/details_activity_menu.xml
@@ -4,9 +4,15 @@
     tools:context=".ChurchesMap">
 
     <item
+        android:id="@+id/show_on_map"
+        android:icon="@drawable/ic_action_globe"
+        android:title="@string/show_on_map"
+        app:showAsAction="always" />
+
+    <item
         android:id="@+id/calendar"
         android:icon="@drawable/ic_action_calendar_month"
         android:title="@string/search_title"
-        app:showAsAction="ifRoom" />
+        app:showAsAction="always" />
 
 </menu>
