--- a/Churches/com.churches.by/src/main/res/layout/about_dialog.xml
+++ b/Churches/com.churches.by/src/main/res/layout/about_dialog.xml
@@ -2,12 +2,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.churches.by.ui.AboutFragment">
+    tools:context="com.churches.by.ui.AboutDialog">
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
+        android:layout_gravity="center"
         android:text="About" />
 
 </FrameLayout>
