--- a/Churches/com.churches.by/src/main/res/menu/menu_churches_map.xml
+++ b/Churches/com.churches.by/src/main/res/menu/menu_churches_map.xml
@@ -2,9 +2,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/menu_about"
-        android:icon="@drawable/ic_action_help"
-        android:title="@string/nav_drawer_about"
+        android:id="@+id/menu_settings"
+        android:icon="@drawable/ic_action_settings"
+        android:title="@string/nav_drawer_settings"
         app:showAsAction="ifRoom" />
 
 </menu>
