implement church list activity using layout coordinator

--- a/Churches/com.churches.by/src/main/res/values/dimens.xml
+++ b/Churches/com.churches.by/src/main/res/values/dimens.xml
@@ -10,5 +10,6 @@
     <dimen name="listPreferredItemPaddingRight">6dip</dimen>
     <dimen name="listPreferredItemPaddingStart">6dip</dimen>
     <dimen name="listPreferredItemPaddingEnd">6dip</dimen>
+    <dimen name="fab_margin">16dp</dimen>
 
 </resources>
